dwn pad fix on mobile

--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -58,7 +58,7 @@
 }
 .dwnPad{
 	position: absolute;
-	top: 75%;
+	top: 80%;
 	left: 48%;
 	z-index: 5;
 }
